Добавляет изменения в главную страницу

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -22,7 +22,7 @@
 
   &__list {
     .reset_ul();
-    width: 280px;
+    width: 283px;
     margin: 0 auto;
     margin-top: 118px;
   }
@@ -74,6 +74,7 @@
 @media (min-width: 660px) {
   .advantages {
     margin-top: 7px;
+    margin-bottom: 95px;
     padding-bottom: 0;
     background-image: linear-gradient(175.5deg, #ffffff, #ffffff 288px, #f2f2f2 288px, #f2f2f2);
 
@@ -84,16 +85,16 @@
     &__paragraf {
       font-size: 40px;
       margin-bottom: 2px;
-      padding-left: 0;
 
       &:nth-of-type(1) {
+        padding: 0;
         width: 620px;
       }
     }
 
     &__list {
       width: 310px;
-      margin-left: 328px;
+      padding-left: 310px;
       margin-top: 125px;
     }
 
@@ -135,6 +136,7 @@
 
 @media (min-width: 960px) {
   .advantages {
+    margin-bottom: 0;
     background-image: linear-gradient(175.5deg, #ffffff, #ffffff 379px, #f2f2f2 379px, #f2f2f2);
 
     &__paragraf {
@@ -145,6 +147,7 @@
         width: 100%;
         text-align: center;
         padding-right: 0;
+        padding-left: 10px;
       }
 
       &:nth-of-type(2) {
@@ -159,7 +162,7 @@
       width: 940px;
       margin: 0;
       padding-top: 402px;
-      padding-left: 18px;
+      padding-left: 40px;
     }
 
     &__item {
