--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -12,7 +12,19 @@
   margin: 0 auto;
 }
 
+@media (min-width: 660px) {
+  .page-header__wrapper {
+    padding: 0 20px;
+  }
+}
+
 @media (min-width: 960px) {
+  .page-header {
+    position: absolute;
+    width: 100%;
+    top: 0;
+  }
+
   .page-header__wrapper {
     width: 960px;
     display: flex;
@@ -32,8 +44,15 @@
   min-height: 63px;
 }
 
+@media (min-width: 320px) {
+  .page-header__logo {
+    width: 100px;
+  }
+}
+
 @media (min-width: 660px) {
   .page-header__logo {
+    width: 170px;
     min-height: 85px;
   }
 }
@@ -65,199 +84,4 @@
     widht: 200px;
     height: 40px;
   }
-}
-
-@media (max-width: 960px) {
-  .main-nav__toggle {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 2;
-
-    display: block;
-    width: 60px;
-    height: 45px;
-
-    background-color: transparent;
-
-    cursor: pointer;
-    border: none;
-
-    &:hover,
-    &:active {
-      background-color: transparent;
-    }
-  }
-
-  .main-nav--closed .main-nav__toggle::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 50px;
-    height: 4px;
-    outline: none;
-    background-color: #ffffff;
-    box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
-  }
-
-  .main-nav--closed .main-nav__toggle:hover::before,
-  .main-nav--closed .main-nav__toggle:focus::before {
-    background-color: #d22856;
-    box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856;
-  }
-
-  .main-nav--closed .main-nav__toggle:active::before {
-    opacity: 0.3;
-    //background-color: fade(#d22856, 0.3);
-    //box-shadow: 0 10px 0 0 fade(#d22856, 0.3), 0 20px 0 0 fade(#d22856, 0.3);
-  }
-
-  .main-nav--opened .main-nav__toggle {
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      top: 15px;
-      left: 27px;
-      width: 32px;
-      height: 4px;
-      background-color: #ffffff;
-    }
-
-    &::before {
-      transform: rotate(45deg);
-    }
-
-    &::after {
-      transform: rotate(-45deg);
-    }
-
-    &:hover::before,
-    &:hover::after,
-    &:focus::before,
-    &:focus::after {
-      background-color: #d22856;
-    }
-
-    &:active::before,
-    &:active::after {
-      opacity: 0.3;
-    }
-  }
-
-  .main-nav--opened .site-list__item {
-    background-color: #283645;
-  }
-
-  .main-nav--nojs .main-nav__toggle {
-    display: none;
-  }
-}
-
-.site-list {
-  .reset_ul();
-  text-align: center;
-  text-transform: uppercase;
-}
-
-@media (min-width: 960px) {
-  .site-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 666px;
-    padding-top: 4px;
-  }
-}
-
-.site-list__item {
-  box-sizing: border-box;
-  box-shadow: inset 0 1px #485461, 0 -1px #000000;
-  min-height: 64px;
-  cursor: pointer;
-}
-
-.site-list__item:last-child {
-  box-shadow: inset 0 1px #485461, 0 -1px #000000, 0 1px #000000;
-}
-
-@media (min-width: 960px) {
-  .site-list__item {
-    position: relative;
-    margin-right: 81px;
-    box-shadow: none;
-
-    &:nth-of-type(4n) {
-      margin-right: 0;
-    }
-
-    &:last-child {
-      box-shadow: none;
-    }
-
-    &__upper {
-      text-transform: uppercase;
-    }
-  }
-}
-
-.site-list__item a {
-  display: block;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  text-decoration: none;
-  font-family: "Open Sans", "Arial", sans-serif;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 32px;
-  font-weight: bold;
-  vertical-align: middle;
-}
-
-.site-list__item:hover a[href] {
-  color: #d22856;
-}
-
-.site-list__item:active a[href] {
-  color: #d22856;
-  opacity: 0.3;
-}
-
-@media (min-width: 960px) {
-  .site-list__item a {
-    font-weight: normal;
-    line-height: 18px;
-    text-transform: none;
-  }
-
-  .site-list__item:active a[href] {
-    color: #ffffff;
-    opacity: 0.3;
-  }
-
-  .site-list__item--active {
-    border-bottom: 2px solid #ffffff;
-  }
-}
-
-.main-nav--closed .main-nav__wrapper {
-  display: none;
-}
-
-@media (min-width: 960px) {
-  .main-nav--closed .main-nav__wrapper {
-    display: block;
-  }
-
-  .main-nav__toggle {
-    display: none;
-  }
-}
-
-.main-nav--opened .main-nav__wrapper {
-  display: block;
-}
-
-.main-nav--nojs .main-nav__wrapper {
-  display: block;
 }
