--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -29,6 +29,7 @@ body {
   padding: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   background-color: #ffffff;
+  font-size: 14px;
   color: #000000;
   font-weight: 300;
 }
