--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,8 @@
 @import "blocks/variables.less";
 @import "blocks/scaffolding.less";
 @import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/.site-list.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/main-form.less";
