Изменяет икон лист

--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -167,9 +167,9 @@
   background-color: #1d2631;
   display: flex;
   flex-wrap: wrap;
-  width: 232px;
+  width: 206px;
   margin: 0 auto;
-  margin-left: 32px;
+  //margin-left: 32px;
 
   &__item {
     margin-right: 32px;
