--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -14,7 +14,7 @@
 
 @media (min-width: 660px) {
   .page-header__wrapper {
-    padding: 0 20px;
+    padding: 0;
   }
 }
 
@@ -54,6 +54,7 @@
   .page-header__logo {
     width: 170px;
     min-height: 85px;
+    padding-left: 20px;
   }
 }
 
