--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -66,10 +66,10 @@
     width: 100%;
     margin-top: 0;
     margin-bottom: 28px;
-    min-height: 828px;
+    min-height: 854px;
     background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat, no-repeat;
-    background-position: 110% 100%, 50.1% 2%;
+    background-position: 110% 211px, -790px 2%;
     background-size: 830px auto, 2560px auto;
 
     &__access {
@@ -111,7 +111,7 @@
     font-size: 50px;
     line-height: 60px;
     padding-left: 21px;
-    padding-top: 193px;
+    padding-top: 220px;
     margin-bottom: 54px;
   }
 }
