Добавляет изменения в меню

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -26,13 +26,12 @@
   }
 
   .page-header__wrapper {
-    box-sizing: border-box;
-    width: 960px;
+    width: 940px;
     padding-top: 27px;
     padding-left: 10px;
     padding-right: 10px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 }
 
@@ -65,7 +64,7 @@
 
 @media (min-width: 960px) {
   .page-header__logo {
-    margin-right: 169px;
+    //margin-right: 169px;
     padding-left: 0;
   }
 }
