--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -147,11 +147,11 @@
         width: 100%;
         text-align: center;
         padding-right: 0;
-        padding-left: 10px;
+        padding-left: 0;
       }
 
       &:nth-of-type(2) {
-        width: 450px;
+        width: 456px;
         line-height: 60px;
       }
     }
@@ -162,7 +162,7 @@
       width: 940px;
       margin: 0;
       padding-top: 402px;
-      padding-left: 40px;
+      padding-left: 26px;
     }
 
     &__item {
