--- a/source/less/blocks/.site-list.less
+++ b/source/less/blocks/.site-list.less
@@ -51,7 +51,6 @@
   padding-top: 15px;
   padding-bottom: 10px;
   text-decoration: none;
-  font-family: "Open Sans", "Arial", sans-serif;
   color: #ffffff;
   font-size: 18px;
   line-height: 32px;
@@ -70,7 +69,7 @@
 
 @media (min-width: 960px) {
   .site-list__item a {
-    font-weight: normal;
+    font-weight: 300;
     line-height: 18px;
     text-transform: none;
     padding-left: 0;
