--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -57,7 +57,8 @@
 @media (min-width: 660px) {
   .page-header__logo {
     width: 170px;
-    min-height: 85px;
+    min-height: 110px;
+    padding-top: 24px;
     padding-left: 20px;
   }
 }
@@ -76,6 +77,12 @@
   padding-left: 20px;
 }
 
+@media (min-width: 320px) {
+  .page-header__logo-image {
+    box-sizing: content-box;
+  }
+}
+
 @media (min-width: 660px) {
   .page-header__logo-image {
     width: 147px;
@@ -87,7 +94,6 @@
 
 @media (min-width: 960px) {
   .page-header__logo-image {
-    widht: 200px;
-    height: 40px;
+    width: 150px;
   }
 }
