--- a/source/less/blocks/.site-list.less
+++ b/source/less/blocks/.site-list.less
@@ -7,9 +7,10 @@
 @media (min-width: 960px) {
   .site-list {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: 620px;
-    padding-top: 4px;
+    padding-top: 5px;
   }
 }
 
@@ -27,7 +28,7 @@
 @media (min-width: 960px) {
   .site-list__item {
     position: relative;
-    margin-right: 80px;
+    margin-right: 82px;
     box-shadow: none;
     min-height: 44px;
 
