--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,8 +1,8 @@
 @media (max-width: 960px) {
   .main-nav__toggle {
     position: absolute;
-    top: 39px;
-    right: 15px;
+    top: 14px;
+    right: 16px;
     z-index: 2;
 
     display: block;
@@ -83,6 +83,12 @@
 
   .main-nav--nojs .main-nav__toggle {
     display: none;
+  }
+}
+
+@media (min-width: 660px) {
+  .main-nav__toggle {
+    top: 38px;
   }
 }
 
