--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -27,7 +27,7 @@
 
   .page-header__wrapper {
     width: 960px;
-    padding-top: 27px;
+    padding-top: 24px;
     padding-left: 10px;
     padding-right: 10px;
     display: flex;
@@ -67,6 +67,8 @@
   .page-header__logo {
     //margin-right: 169px;
     padding-left: 0;
+    padding-top: 0;
+    min-height: 85px;
   }
 }
 
@@ -94,6 +96,6 @@
 
 @media (min-width: 960px) {
   .page-header__logo-image {
-    width: 150px;
+    width: 147px;
   }
 }
