--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -73,7 +73,7 @@
     background-size: 830px auto, 2560px auto;
 
     &__access {
-      padding-left: 0px;
+      padding-left: 0;
       font-weight: 300;
     }
   }
@@ -158,7 +158,7 @@
 @media (min-width: 960px) {
   .button {
     font-size: 21px;
-    margin-left: 0px;
+    margin-left: 0;
     margin-bottom: 67px;
   }
 }
