--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,6 @@
 @import "blocks/app.less";
 @import "blocks/post.less";
 @import "blocks/timer.less";
+@import "blocks/reviews.less";
+@import "blocks/slider.less";
+@import "blocks/price.less";
