--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,8 +1,9 @@
 
 .advantages {
+  margin-bottom: 41px;
   padding-top: 43px;
   padding-bottom: 285px;
-  background-image: linear-gradient(174deg, #ffffff, #ffffff 256px, #f2f2f2 256px, #f2f2f2);
+  background-image: linear-gradient(174deg, #ffffff, #ffffff 249px, #f2f2f2 249px, #f2f2f2);
 
   &__wrapper {
     padding-bottom: 0;
@@ -37,7 +38,7 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -320px;
+      bottom: -317px;
       left: 62px;
       width: 157px;
       height: 300px;
