добавляет слайдер прайса

--- a/source/less/blocks/slider-price.less
+++ b/source/less/blocks/slider-price.less
@@ -1,51 +1,92 @@
 .slider-price {
+  position: relative;
   overflow: hidden;
   width: 320px;
   padding-top: 130px;
+
+  &__option {
+    position: absolute;
+    top: 240px;
+    left: 40px;
+
+    &__first-column {
+      font-weight: normal;
+      line-height: 30px;
+      color: #283645;
+      text-transform: uppercase;
+      padding-bottom: 28px;
+    }
+  }
 
   &__yes {
     width: 29px;
     height: 27px;
     margin-left: 230px;
-    margin-top: 10px;
+    margin-top: 14px;
+    margin-bottom: 13px;
   }
 
   &__no {
     width: 27px;
     height: 26px;
     margin-left: 231px;
-    margin-top: 9px;
+    margin-top: 3px;
   }
 
   &__list {
-    position: relative;
     border-collapse: collapse;
+    border-spacing: 0;
     width: 840px;
-    transform: translateX(-260px);
+
+    &--left {
+      transform: translateX(20px);
+    }
+
+    &--right {
+      transform: translateX(-540px);
+    }
+
+    &--center {
+      transform: translateX(-260px);
+    }
   }
 
-  &__first-column {
-    position: absolute;
-    display: block;
+  /*&__first-column {
+    //display: block;
     font-weight: normal;
     line-height: 30px;
     color: #283645;
     text-transform: uppercase;
-    padding-top: 15px;
-    padding-left: 304px;//41px;
+    border: none;
+
+    &--filter {
+      position: absolute;
+      top: 112px;
+      left: 303px;
+    }
+
+    &--smile {
+      position: absolute;
+      top: 173px;
+      left: 303px;
+    }
+
+    &--comment {
+      position: absolute;
+      top: 234px;
+      left: 303px;
+    }
 
     &__title {
       display: none;
     }
-  }
+  }*/
 
   &__second-column {
-    display: block;
     border-bottom: 2px solid #e5e5e5;
     border-left: 2px solid #e5e5e5;
     border-right: 2px solid #e5e5e5;
     width: 280px;
-    height: 58px;
 
     &__title {
       width: 280px;
@@ -73,7 +114,7 @@
   &__third-column {
     border-bottom: 2px solid #e5e5e5;
     border-right: 2px solid #e5e5e5;
-    height: 58px;
+    width: 280px;
 
     &__title {
       width: 280px;
@@ -95,10 +136,9 @@
   }
 
   &__fourth-column {
-    display: block;
     border-bottom: 2px solid #e5e5e5;
     border-right: 2px solid #e5e5e5;
-    height: 58px;
+    width: 280px;
 
     &__title {
       width: 280px;
