Добавляет кнопочки к слайдеру

--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,3 +1,9 @@
 .price {
-  background-image: linear-gradient(174deg, #ffffff, #ffffff 60px, #f2f2f2 60px, #f2f2f2);
+  background-image: linear-gradient(175.5deg, #ffffff, #ffffff 64px, #f2f2f2 64px, #f2f2f2);
+  margin-bottom: 40px;
+
+  &__toggles {
+    margin: 0 auto;
+    padding-bottom: 62px;
+  }
 }
