--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,17 +1,19 @@
 .contacts {
   padding-bottom: 100px;
-  background-image: linear-gradient(195deg, gray, gray 411px, transparent 411px, transparent),
-    linear-gradient(165deg, gray, gray 411px, transparent 411px, transparent);
+  background-image: linear-gradient(192deg, #ffffff, #ffffff 395px, transparent 395px, transparent),
+    linear-gradient(168deg, #ffffff, #ffffff 395px, transparent 395px, transparent);
   background-size: 160px 446px, 160px 446px;
   background-repeat: no-repeat, no-repeat;
   background-position: 0 0, 160px 0;
 
   &__manifest {
     margin: 0 auto;
+    margin-bottom: 37px;
     padding: 0;
     width: 280px;
     text-align: center;
     font-size: 24px;
+    line-height: 28px;
     color: #283645;
   }
 
@@ -20,20 +22,35 @@
     margin: 0 auto;
   }
 
+  &__content {
+    margin-bottom: 23px;
+
+    &:nth-of-type(2) {
+      margin-bottom: 27px;
+    }
+  }
+
   &__name {
+    margin: 0;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
     color: #283645;
+    margin-bottom: 5px;
   }
 
   &__item {
+    margin: 0;
     display: block;
     text-align: center;
     font-size: 24px;
     font-weight: 300;
     text-decoration: none;
     color: #d22856;
+  }
+
+  &__street {
+    padding-top: 10px;
   }
 }
 
