--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -44,6 +44,7 @@
     display: block;
     text-align: center;
     font-size: 24px;
+    line-height: 28px;
     font-weight: 300;
     text-decoration: none;
     color: #d22856;
@@ -59,6 +60,8 @@
     &__manifest {
       width: 370px;
       font-size: 40px;
+      line-height: 48px;
+      margin-bottom: 45px;
     }
 
     &__addres {
@@ -68,7 +71,12 @@
     }
 
     &__content {
-      width: 300px;
+      width: 320px;
+      margin-bottom: 47px;
+    }
+
+    &__name {
+      margin-bottom: 10px;
     }
   }
 }
@@ -76,7 +84,10 @@
 @media (min-width: 960px) {
   .contacts {
     &__manifest {
+      width: 460px;
       font-size: 50px;
+      line-height: 60px;
+      margin-bottom: 58px;
     }
 
     &__content {
@@ -91,6 +102,10 @@
       &:nth-of-type(3) {
         order: 2;
       }
+    }
+
+    &__name {
+      margin-bottom: 25px;
     }
   }
 }
