--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -2,8 +2,36 @@
   background-image: linear-gradient(175.5deg, #ffffff, #ffffff 64px, #f2f2f2 64px, #f2f2f2);
   margin-bottom: 40px;
 
+  &__wrapper {
+    margin: 0 auto;
+  }
+
   &__toggles {
     margin: 0 auto;
     padding-bottom: 62px;
+  }
+}
+
+@media (min-width: 660px) {
+  .price {
+    padding-bottom: 30px;
+    margin-bottom: 44px;
+
+    &__wrapper {
+      padding: 0 20px;
+    }
+
+    &__toggles {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: 960px) {
+  .price {
+    background-image: linear-gradient(176deg, #ffffff, #ffffff 88px, #f2f2f2 88px, #f2f2f2);
+    padding-top: 162px;
+    padding-bottom: 55px;
+    margin-bottom: 64px;
   }
 }
